2020-09-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_toolbars.c: Add function documentation:

        * x_toolbars_set_show_tooltips

2020-09-17 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Revise attributes-detach menu item tooltip.

    * include/gschem.h: Include gschem_macros.h.

    * include/gschem_globals.h: Remove message dialog macros.

    * include/gschem_macros.h: Relocate message dialog macros removed from
      gschem_globals.h.

    * include/x_toolbars.h: Revise attributes-attach toolbar button tooltip.

    * src/object/o_box.c: Remove individual inclusion of gschem_macros.h.

    * src/object/o_grips.c: Remove individual inclusion of gschem_macros.h.

2020-09-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_menus.c: Revise pop_add_component menu item tooltip. Add source
      comments. Convert plain text comment to internal Doxygen documentation.

    * src/x_toolbars.c: Replace gtk_toolbar_append_space with
      geda_toolbar_append_space.

2020-09-12 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/fr.po: Update French translations.
    * po/en_GB.po: Update Great Britain.
    * po/kh.po: Update Khmer translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.
    * po/sr.po: Update Serbian translations.

2020-09-11 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Revise menu add-component item tooltip.

    * include/x_toolbars.h: Revise toolbar button tooltips:

        * add-component
        * add-attribute
        * add-text
        * add-line
        * add-box
        * add-circle
        * add-arc
        * add-path

2020-09-09 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Remove non-existent icon from page-manager
      menu entry.
